...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="411dp"
        android:layout_height="603dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
...
            android:layout_centerHorizontal="true"
            android:layout_marginTop="186dp"
            android:text="Email:"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl2"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="239dp"
            android:layout_height="43dp"
            android:layout_below="@+id/lbl"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="148dp"
            android:layout_height="43dp"
            android:layout_above="@+id/registerbtn"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="17dp"
            android:background="@drawable/mybuttons"
            android:onClick="loginUser"
            android:text="Sign In"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="17sp" />

        <Button
...
            android:layout_marginBottom="12dp"
            android:onClick="forgotPassword"
            android:text="Forgot your password?"
            android:textColor="@android:color/background_light" />

        <CheckBox
            android:id="@+id/rememberme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="173dp"
            android:checked="true"
            android:enabled="true"
            android:text="Remember me" />

        <ImageView
            android:id="@+id/eye"
            android:layout_width="28dp"
            android:layout_height="22dp"
            android:layout_alignParentBottom="true"
...
