...
        android:visibility="visible" />

    <TextView
        android:id="@+id/txt_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:background="@android:color/white"
        android:onClick="showGoal"
        android:text="Number of Steps: 0 "
        android:textSize="18sp" />

...
